--- a/frontend/viajes/src/App.css
+++ b/frontend/viajes/src/App.css
@@ -1,19 +1,158 @@
 .App {
     position: absolute;
-    top: 15%;
-    left: 26%;
+    top: 12%;
+    right: 80%;
     transform: translate(-40%, -40%);
     width: 300px;
     height: 300px;
-    text-align: center;
+    text-align: center; 
     
   }
 
   body{
     background-color: rgb(77, 131, 154); 
     background-image: url('https://images.unsplash.com/photo-1564500617448-e541b1df7cee?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+    margin: 0 auto;
+    min-height: 200vh;
+    max-width: 800px;
     background-size : cover;
+    position: relative;
+    padding: 3em ;
   }
    
+  * {
+    
+    margin: 0px;
+    padding: 0px;
+}
  
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px 8px;
+  text-decoration: none;
+  font-size: 35px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+ 
+
+.logo{
+  width: 60px;
+  margin: 0vh;
+  margin-right: 50px;
+}
+.package-title h2{
+  font-size: 40px;
+  font-weight: 550;
+  padding-top: 2px;
+  padding-bottom: 10px;
+  line-height: 2;
+}
+.location-content{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.col-content{
+  position: relative;
+  filter:brightness(95%);
+  transition: all 0.3s cubic-bezier(0.445,0.05,0.55,0.95);
+
+}
+
+.col-content img{
+  margin-bottom: 40px;
+  height: 400px;
+  border-radius: 25px;
+  width: 120%;
   
+}
+
+.col-content h5{
+  position: absolute;
+  font-size: 25px;
+  color: white;
+  font-weight: 500;
+  left: 20px;
+  bottom: 105px;
+  cursor: pointer;
+}
+
+.col-content p{
+  position: absolute;
+  font-size: 20px;
+  color: white;
+  left: 20px;
+  bottom: 80px;
+  cursor: pointer;
+}
+.col-form-label h3
+{
+  font-size: 30px;
+  font-weight: 550;
+  padding-top: 1px;
+  padding-bottom: 10px;
+ 
+}
+
+.col-auto input
+{
+  width: 25%;
+  padding: 10px;
+  border: none;
+  outline: none;
+  background-color: #191919;
+  font-size: 25px;
+  color: white;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.btn-search{
+  width: 15%;
+  padding:10px;
+  background-color: #82b1e7;
+  font-size: 25px;
+  outline: none;
+  font-weight: 550;
+}
+
+.weather-icon
+{
+  height: 80px;
+  width: 80px;
+}
+
+.h2
+{
+  color:#0f1213;
+  font-size: 25px;
+  font-weight: 550;
+}
+
+.h5
+{
+  color:#0f1213;
+  font-size: 25px;
+  font-weight: 550;
+}
+
+p{
+  font-size: 20px; 
+  font-weight: 550;
+}
+ footer{ 
+ padding: 1em 0;
+  position: absolute; 
+  bottom: 0;
+  width: 100%;
+  
+ }
