--- a/frontend/viajes/src/App.css
+++ b/frontend/viajes/src/App.css
@@ -28,7 +28,7 @@
  
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #741b1b;
   text-align: center;
   padding: 10px 8px;
   text-decoration: none;
@@ -54,6 +54,8 @@
   padding-top: 2px;
   padding-bottom: 10px;
   line-height: 2;
+  color:blue;
+  font-family: "Arial, Helvetica, sans-serif";
 }
 .location-content{
   display: flex;
@@ -79,7 +81,7 @@
 .col-content h5{
   position: absolute;
   font-size: 25px;
-  color: white;
+  color: #f2f2f2;
   font-weight: 500;
   left: 20px;
   bottom: 105px;
@@ -90,7 +92,7 @@
 .col-content p{
   position: absolute;
   font-size: 20px;
-  color: white;
+  color:#f2f2f2;
   left: 20px;
   bottom: 80px;
     
@@ -101,6 +103,7 @@
   font-weight: 550;
   padding-top: 1px;
   padding-bottom: 10px;
+  color:blue;
  
 }
 
@@ -112,7 +115,7 @@
   outline: none;
   background-color: #191919;
   font-size: 25px;
-  color: white;
+  color: rgb(243, 243, 244);
   margin-bottom: 10px;
   border-radius: 10px;
 }
@@ -141,7 +144,7 @@
 
 .h5
 {
-  color:#0f1213;
+  color:#000000;
   font-size: 25px;
   font-weight: 550;
 }
